update losses bkp scikit-image

--- a/work.ipynb
+++ b/work.ipynb
@@ -12,11 +12,16 @@
    "metadata": {},
    "source": [
     "### To do\n",
-    "Create a conda env \n",
-    "    Im having a error\n",
-    "Selecionar e colocar arquiteturas\n",
-    "Colocar funcoes de perda da tabela\n",
-    "Colocar todas as metricas"
+    "* Create a conda env X\n",
+    "*     Im having a error X (resolvi usando pip no ambiente)\n",
+    "* Selecionar e colocar arquiteturas x\n",
+    "* unet x\n",
+    "* ddpm\n",
+    "* cyclogan \n",
+    "* vae\n",
+    "* vit\n",
+    "* Colocar funcoes de perda da tabela\n",
+    "* Colocar todas as metricas"
    ]
   },
   {
@@ -738,13 +743,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class GANLoss(nn.Module):\n",
+    "    def __init__(self, use_lsgan=True):\n",
+    "        super(GANLoss, self).__init__()\n",
+    "        self.use_lsgan = use_lsgan\n",
+    "        if use_lsgan:\n",
+    "            self.criterion = nn.MSELoss()\n",
+    "        else:\n",
+    "            self.criterion = nn.BCELoss()\n",
+    "\n",
+    "    def forward(self, output, target_is_real):\n",
+    "        target = torch.ones_like(output) if target_is_real else torch.zeros_like(output)\n",
+    "        loss = self.criterion(output, target)\n",
+    "        return loss\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### color loss\t \t \n"
+    "### Color loss\t \t \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ColorLoss(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ColorLoss, self).__init__()\n",
+    "        self.criterion = nn.MSELoss()\n",
+    "\n",
+    "    def forward(self, input, target):\n",
+    "        return self.criterion(input, target)\n"
    ]
   },
   {
@@ -756,11 +793,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pytorch_ssim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpytorch_ssim\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSSIMLoss\u001b[39;00m(nn\u001b[38;5;241m.\u001b[39mModule):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pytorch_ssim'"
+     ]
+    }
+   ],
+   "source": [
+    "import pytorch_ssim\n",
+    "\n",
+    "class SSIMLoss(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(SSIMLoss, self).__init__()\n",
+    "\n",
+    "    def forward(self, img1, img2):\n",
+    "        return 1 - pytorch_ssim.ssim(img1, img2)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### MS-SSIM\t \t\t \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -770,6 +842,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -777,29 +856,156 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Uranker\t \t \t \t \t \n",
-    "### MUSIQ\t \t \t \t \t \n",
-    "### Content Loss VGG\t \t \t \t \t \n",
-    "### Acumlative Superiority\t \t \t \t \t \n",
-    "### Discriminative\t \t \t \t \t \n",
-    "### L2\t \t \t \t \t \n",
-    "### L1\t \t \t \t \t \n",
-    "### CIoU\t \t \t \t \t \n",
-    "### Adversarial Loss\t \t \t \t \t \n",
-    "### WGan Loss\t \t \t \t \t \n",
-    "### Gradient Loss\t \t \t \t \t \n",
-    "### Color Structure Perceptual\t \t \t \t \t \n",
-    "### Detail loss\t \t \t \t \t \n",
-    "### CGan\t \t \t \t \t \n",
-    "### Angular\t \t \t \t \t \n",
-    "### margin-ranking loss\t \t \t \t \t \n",
-    "### Classifier loss\t \t \t \t \t \n",
-    "### Identity mapping\t \t \t \t \t \n",
-    "### Cycle consistency loss\t \t \t \t \t \n",
-    "### LAB loss\t \t \t \t \t \n",
+    "### Uranker\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MUSIQ\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Content Loss VGG\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Acumlative Superiority\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discriminative\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L2\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L1\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CIoU\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adversarial Loss\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WGan Loss\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Loss\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Color Structure Perceptual\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Detail loss\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CGan\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Angular\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### margin-ranking loss\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classifier loss\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identity mapping\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cycle consistency loss\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LAB loss\t \t \t \t \t \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### LCH loss"
    ]
   },
