adicionadas loss baguncadas

--- a/work2.ipynb
+++ b/work2.ipynb
@@ -1852,7 +1852,371 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# def color_loss(output, gt,mask=None):\n",
+    "#     img_ref = F.normalize(output, p = 2, dim = 1)\n",
+    "#     ref_p = F.normalize(gt, p = 2, dim = 1)\n",
+    "#     if mask!=None:\n",
+    "#         img_ref=mask*img_ref\n",
+    "#         ref_p*=mask\n",
+    "#     loss_cos = 1 - torch.mean(F.cosine_similarity(img_ref, ref_p, dim=1))\n",
+    "#     # loss_cos = self.mse(img_ref, ref_p)\n",
+    "#     return loss_cos\n",
+    "\n",
+    "# def light_loss(output,gt,mask=None):\n",
+    "#     #output = torch.mean(output, 1, keepdim=True)\n",
+    "#     #gt=torch.mean(gt,1,keepdim=True)\n",
+    "#     output =output[:, 0:1, :, :] * 0.299 + output[:, 1:2, :, :] * 0.587 + output[:, 2:3, :, :] * 0.114\n",
+    "#     gt = gt[:, 0:1, :, :] * 0.299 + gt[:, 1:2, :, :] * 0.587 + gt[:, 2:3, :, :] * 0.114\n",
+    "#     if mask != None:\n",
+    "#         output*=mask\n",
+    "#         gt*=mask\n",
+    "#     loss=F.l1_loss(output,gt)\n",
+    "#     return loss\n",
+    "\n",
+    "###############################################\n",
+    "\n",
+    "class color_loss(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(color_loss, self).__init__()\n",
+    "    \n",
+    "    def forward(self, output, gt,mask=None):\n",
+    "        img_ref = F.normalize(output, p = 2, dim = 1)\n",
+    "        ref_p = F.normalize(gt, p = 2, dim = 1)\n",
+    "        if mask!=None:\n",
+    "            img_ref=mask*img_ref\n",
+    "            ref_p*=mask\n",
+    "        loss_cos = 1 - torch.mean(F.cosine_similarity(img_ref, ref_p, dim=1))\n",
+    "        # loss_cos = self.mse(img_ref, ref_p)\n",
+    "        return loss_cos\n",
+    "\n",
+    "class light_loss(nn.Module):##pesquisar significado das modificacoes\n",
+    "    def __init__(self):\n",
+    "        super(light_loss, self).__init__()\n",
+    "\n",
+    "    def forward(self,output,gt,mask=None):\n",
+    "        #output = torch.mean(output, 1, keepdim=True)\n",
+    "        #gt=torch.mean(gt,1,keepdim=True)\n",
+    "        output =output[:, 0:1, :, :] * 0.299 + output[:, 1:2, :, :] * 0.587 + output[:, 2:3, :, :] * 0.114\n",
+    "        gt = gt[:, 0:1, :, :] * 0.299 + gt[:, 1:2, :, :] * 0.587 + gt[:, 2:3, :, :] * 0.114\n",
+    "        if mask != None:\n",
+    "            output*=mask\n",
+    "            gt*=mask\n",
+    "        loss=F.l1_loss(output,gt)\n",
+    "        return loss\n",
+    "\n",
+    "##############################################3\n",
+    "\n",
+    "#NAO SEI O QUE FAZ\n",
+    "class L_color(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super(L_color, self).__init__()\n",
+    "\n",
+    "    def forward(self, x ):\n",
+    "\n",
+    "        b,c,h,w = x.shape\n",
+    "\n",
+    "        mean_rgb = torch.mean(x,[2,3],keepdim=True)\n",
+    "        mr,mg, mb = torch.split(mean_rgb, 1, dim=1)\n",
+    "        Drg = torch.pow(mr-mg,2)\n",
+    "        Drb = torch.pow(mr-mb,2)\n",
+    "        Dgb = torch.pow(mb-mg,2)\n",
+    "        k = torch.pow(torch.pow(Drg,2) + torch.pow(Drb,2) + torch.pow(Dgb,2),0.5)\n",
+    "        return k\n",
+    "\n",
+    "class L_exp(nn.Module):\n",
+    "    \"\"\"\n",
+    "    patch_size: tamanho do patch para calcular a média\n",
+    "    mean_val: valor médio esperado\n",
+    "    \"\"\"\n",
+    "    def __init__(self,patch_size,mean_val):\n",
+    "        super(L_exp, self).__init__()\n",
+    "        # print(1)\n",
+    "        self.pool = nn.AvgPool2d(patch_size)\n",
+    "        self.mean_val = mean_val\n",
+    "\n",
+    "    def forward(self, x ):\n",
+    "        device=x.device\n",
+    "        b,c,h,w = x.shape\n",
+    "        x = torch.mean(x,1,keepdim=True)\n",
+    "        mean = self.pool(x)\n",
+    "\n",
+    "        d = torch.mean(torch.pow(mean- torch.FloatTensor([self.mean_val] ).to(device),2))\n",
+    "        return d\n",
+    "    \n",
+    "#adicionar Jdark loss\n",
+    "class DarkChannelPriorLoss(nn.Module):\n",
+    "    \"\"\"\n",
+    "    patch_size: tamanho do patch para calcular a média\n",
+    "    \"\"\"\n",
+    "    def __init__(self, patch_size):\n",
+    "        #imitar L_exp com o patch size\n",
+    "        super(DarkChannelPriorLoss, self).__init__()\n",
+    "        self.patch_size = patch_size\n",
+    "\n",
+    "    def forward(self, input_image):\n",
+    "        # Padding to handle border cases\n",
+    "        padding = self.patch_size // 2\n",
+    "        padded_image = nn.functional.pad(input_image, (padding, padding, padding, padding), mode='reflect')\n",
+    "\n",
+    "        # Compute the dark channel\n",
+    "        dark_channel = torch.min(padded_image, dim=1)[0]\n",
+    "\n",
+    "        # Take minimum over color channels\n",
+    "        dark_channel_min = torch.min(dark_channel, dim=1)[0]\n",
+    "\n",
+    "        # Take minimum over pixels\n",
+    "        dark_channel_prior = torch.min(dark_channel_min, dim=1)[0]\n",
+    "\n",
+    "        # Take the mean to get a scalar loss value\n",
+    "        loss = torch.mean(dark_channel_prior)\n",
+    "\n",
+    "        return loss\n",
+    "\n",
+    "class L1Loss(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(L1Loss, self).__init__()\n",
+    "\n",
+    "    def forward(self, input, target):\n",
+    "        # Calcula a diferença absoluta entre o input e o target\n",
+    "        abs_diff = torch.abs(input - target)\n",
+    "        # Calcula a média da diferença absoluta\n",
+    "        loss = torch.mean(abs_diff)\n",
+    "        return loss\n",
+    "\n",
+    "    \n",
+    "# LPIPS(net='vgg')#VGG16\n",
+    "# #adicionar alexnet(Adicionada)\n",
+    "# LPIPS(net='alex')\n",
+    "# #adicionar squeezenet(Adicionada)\n",
+    "# LPIPS(net='squeeze')\n",
+    "from numpy import mean, round, transpose\n",
+    "from time import time\n",
+    "\n",
+    "#print(\"gt_image: \",gt_image.shape,\"t_image: \", t_image.shape, \"/n\")\n",
+    "t_image = torch.rand(1, 3, 255, 255)\n",
+    "gt_image = t_image#torch.rand(1, 3, 255, 255)   \n",
+    "mean_val = mean(t_image.detach().numpy())\n",
+    "losses = {\n",
+    "\"light_loss\": light_loss(),#\n",
+    "#\"color_loss\": color_loss(),#\n",
+    "\"DarkChannelPriorLoss\": DarkChannelPriorLoss(5),\n",
+    "\"L1Loss\": L1Loss(),\n",
+    "\"lch_loss\": lch_Loss(),\n",
+    "\"lab_loss\": lab_Loss(),\n",
+    "\"L_exp\": L_exp(5,mean_val),\n",
+    "\"L_color\": L_color(),\n",
+    "# \"loss_fn_alex\" : lpips.LPIPS(net='alex'), # best forward scores#\n",
+    "# \"loss_fn_vgg\" : lpips.LPIPS(net='vgg'), # closer to \"traditional\" perceptual loss, when used for optimization#\n",
+    "# \"loss_squeeze\" : lpips.LPIPS(net='squeeze') # lightest, faster, narrower, lower quality#\n",
+    "}\n",
+    "#image_low = transpose(data_low.detach().cpu().numpy(), (1, 2, 0))\n",
+    "#image_high = transpose(data_high.detach().cpu().numpy(), (1, 2, 0))\n",
+    "for name, loss in losses.items():\n",
+    "    start_time = time()\n",
+    "    if name == \"L1Loss\" or name == \"light_loss\" or name == \"color_loss\" or name == \"SSIM loss\" or name == \"color_loss\" or name == \"mse_loss\" or name == \"lab_loss\" or name == \"lch_loss\":\n",
+    "        loss = loss(t_image, gt_image)\n",
+    "    else:\n",
+    "        loss = loss(t_image)\n",
+    "    end_time = time()\n",
+    "    print(name, \":\", loss.item(), \"// Time:\", round(end_time-start_time,6))\n",
+    "light_loss : 0.0 // Time: 0.0012\n",
+    "DarkChannelPriorLoss : 4.0531158447265625e-06 // Time: 0.001156\n",
+    "L1Loss : 0.0 // Time: 0.000819\n",
+    "lch_loss : 0.15072797238826752 // Time: 0.068778\n",
+    "lab_loss : 427.66912841796875 // Time: 0.016119\n",
+    "L_exp : 0.0011362188961356878 // Time: 0.002946\n",
+    "L_color : 6.238672085601138e-07 // Time: 0.0004\n",
+    "from ptcolor import rgb2lab \n",
+    "from Qnt import quantAB,quantL\n",
+    "import torch\n",
+    "from torch.nn import functional\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "#https://github.com/LintaoPeng/U-shape_Transformer_for_Underwater_Image_Enhancement/tree/main/loss\n",
+    "class lab_Loss(nn.Module):\n",
+    "    def __init__(self, alpha=1,weight=1,levels=7,vmin=-80,vmax=80):\n",
+    "        super(lab_Loss, self).__init__()\n",
+    "        self.alpha=alpha\n",
+    "        self.weight=weight\n",
+    "        self.levels=levels\n",
+    "        self.vmin=vmin\n",
+    "        self.vmax=vmax\n",
+    "\n",
+    "    def Hist_2_Dist_L(self,img, tab,alpha):\n",
+    "        img_dist=((img.unsqueeze(1)-tab)**2)\n",
+    "        p=functional.softmax(-alpha*img_dist,dim=1)\n",
+    "        return p\n",
+    "\n",
+    "    def Hist_2_Dist_AB(self,img,tab,alpha):\n",
+    "        #print(\"imagem esta no cuda? \",img.is_cuda,\"tab esta no cuda? \",tab.is_cuda)\n",
+    "        img_dist=((img.unsqueeze(1)-tab)**2).sum(2)\n",
+    "        p = torch.nn.functional.softmax(-alpha*img_dist, dim=1)\n",
+    "        return p\n",
+    "\n",
+    "    def loss_ab(self,img,gt,alpha,tab,levels):\n",
+    "        p= self.Hist_2_Dist_AB(img, tab,alpha).cuda()\n",
+    "        q= self.Hist_2_Dist_AB(gt,tab,alpha).cuda()\n",
+    "        p = torch.clamp(p, 0.001, 0.999)\n",
+    "        loss = -(q*torch.log(p)).sum([1,2,3]).mean()\n",
+    "        return loss\n",
+    "\n",
+    "    def forward(self,img,gt):\n",
+    "        tab=quantAB(self.levels,self.vmin,self.vmax).cuda()\n",
+    "        lab_img=torch.clamp(rgb2lab(img.cuda()),self.vmin,self.vmax).cuda()\n",
+    "        lab_gt=torch.clamp(rgb2lab(gt),self.vmin,self.vmax).cuda()\n",
+    "        loss_l=torch.abs(lab_img[:,0,:,:]-lab_gt[:,0,:,:]).mean()\n",
+    "        loss_AB=self.loss_ab(lab_img[:,1:,:,:],lab_gt[:,1:,:,:],self.alpha,tab,self.levels)\n",
+    "        loss=loss_l+self.weight*loss_AB\n",
+    "        #return (loss,loss_l,loss_AB)\n",
+    "        return loss\n",
+    "import torch\n",
+    "from ptcolor import * \n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class lch_Loss(nn.Module):\n",
+    "    def __init__(self, weightC=1,weightH=1,levels=4,eps=0.01,weight=None):\n",
+    "        super(lch_Loss, self).__init__()\n",
+    "        self.weightC=weightC\n",
+    "        self.weightH=weightH\n",
+    "        self.levels=levels\n",
+    "        self.eps=eps\n",
+    "        self.weight=weight\n",
+    "\n",
+    "\n",
+    "    def hue_to_distribution(self,h, levels, eps=0.0):\n",
+    "        h = h * (levels / 360.0)\n",
+    "        a = torch.arange(levels).float().to(h.device)\n",
+    "        a = a.view(1, levels, 1, 1)\n",
+    "        h=h.unsqueeze(1)\n",
+    "        p = torch.relu(1 - torch.abs(h - a))\n",
+    "        p = p + (a == 0.0).float() * p[:, -1:, :, :]\n",
+    "        p = (p + torch.ones_like(p) * eps) / (1.0 + levels * eps)\n",
+    "        return p\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def forward(self,img,gt):\n",
+    "        # img_lch= ptcolor.rgb2lch(img)\n",
+    "        # gt_lch= ptcolor.rgb2lch(gt)\n",
+    "        img_lch= rgb2lch(img)\n",
+    "        gt_lch= rgb2lch(gt)\n",
+    "        loss_L=torch.mean(torch.abs(img_lch[:,0,:,:]-gt_lch[:,0,:,:]))\n",
+    "        loss_C=torch.mean(torch.abs(img_lch[:,1,:,:]-gt_lch[:,1,:,:]))\n",
+    "        img_H_Dist=torch.clamp(self.hue_to_distribution(img_lch[:,2,:,:],self.levels,self.eps),0.001, 0.999)\n",
+    "        gt_H_Dist =torch.clamp(self.hue_to_distribution(gt_lch[:, 2, :, :], self.levels),0.001, 0.999)\n",
+    "        if self.weight is None:\n",
+    "            loss_H = torch.mean(-torch.mul(gt_H_Dist, torch.log(img_H_Dist)))\n",
+    "        else:\n",
+    "            loss_H = -(gt_lch[:,1,:,:]*(gt_H_Dist*torch.log(img_H_Dist)).sum(1,keepdim=True)).mean()\n",
+    "        loss=loss_L+self.weightC*loss_C+self.weightH*loss_H\n",
+    "        #return(loss,loss_L,loss_C,loss_H)\n",
+    "        return loss\n",
+    "lab = lab_Loss()\n",
+    "lch = lch_Loss()\n",
+    "print(f\"\"\"\n",
+    "      Losses\n",
+    "            lab: {lab(input1,input1)}\n",
+    "            lch: {lch(input1,input1)}\n",
+    "      \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lpips\n",
+    "\n",
+    "\n",
+    "loss_perceptual = lpips.LPIPS(net='vgg')#a vgg vem do lpips entao\n",
+    "\n",
+    "loss_perceptual = lpips.LPIPS(net='squeeze')\n",
+    "\n",
+    "loss_perceptual = lpips.LPIPS(net='alex')\n",
+    "#from torchvision.models import vgg11, vgg11_bn, vgg16, vgg16_bn, vgg19_bn, vgg19, vgg13, vgg13_bn\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torchvision.models as models\n",
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "class VGGPerceptualLoss(nn.Module):\n",
+    "    def __init__(self, vgg_model='vgg16', layer_indices=None):\n",
+    "        super(VGGPerceptualLoss, self).__init__()\n",
+    "        # Load the VGG model\n",
+    "        if vgg_model == 'vgg11':\n",
+    "            self.vgg = models.vgg11(weights=models.VGG11_Weights.IMAGENET1K_V1).features\n",
+    "        elif vgg_model == 'vgg11_bn':\n",
+    "            self.vgg = models.vgg11_bn(weights=models.VGG11_BN_Weights.IMAGENET1K_V1).features\n",
+    "        elif vgg_model == 'vgg13':\n",
+    "            self.vgg = models.vgg13(weights=models.VGG13_Weights.IMAGENET1K_V1).features\n",
+    "        elif vgg_model == 'vgg13_bn':\n",
+    "            self.vgg = models.vgg13_bn(weights=models.VGG13_BN_Weights.IMAGENET1K_V1).features\n",
+    "        elif vgg_model == 'vgg16':\n",
+    "            self.vgg = models.vgg16(weights=models.VGG16_Weights.IMAGENET1K_V1).features\n",
+    "        elif vgg_model == 'vgg16_bn':\n",
+    "            self.vgg = models.vgg16_bn(weights=models.VGG16_BN_Weights.IMAGENET1K_V1).features\n",
+    "        elif vgg_model == 'vgg19':\n",
+    "            self.vgg = models.vgg19(weights=models.VGG19_Weights.IMAGENET1K_V1).features\n",
+    "        elif vgg_model == 'vgg19_bn':\n",
+    "            self.vgg = models.vgg19_bn(weights=models.VGG19_BN_Weights.IMAGENET1K_V1).features\n",
+    "        else:\n",
+    "            raise ValueError(\"Unsupported VGG model type\")\n",
+    "\n",
+    "        self.vgg.eval()  # Set to evaluation mode\n",
+    "        for param in self.vgg.parameters():\n",
+    "            param.requires_grad = False  # Freeze the parameters\n",
+    "\n",
+    "        # Specify the layers to extract features from\n",
+    "        if layer_indices is None:\n",
+    "            self.layer_indices = [3, 8, 15, 22]  # Default layers for VGG16\n",
+    "        else:\n",
+    "            self.layer_indices = layer_indices\n",
+    "\n",
+    "    def forward(self, x, y):\n",
+    "        # Normalize the inputs\n",
+    "        mean = torch.tensor([0.485, 0.456, 0.406]).view(1, 3, 1, 1).to(x.device)\n",
+    "        std = torch.tensor([0.229, 0.224, 0.225]).view(1, 3, 1, 1).to(x.device)\n",
+    "        x = (x - mean) / std\n",
+    "        y = (y - mean) / std\n",
+    "\n",
+    "        # Extract features\n",
+    "        x_features = self.extract_features(x)\n",
+    "        y_features = self.extract_features(y)\n",
+    "\n",
+    "        # Calculate perceptual loss\n",
+    "        loss = 0.0\n",
+    "        for xf, yf in zip(x_features, y_features):\n",
+    "            loss += nn.functional.l1_loss(xf, yf)\n",
+    "\n",
+    "        return loss\n",
+    "\n",
+    "    def extract_features(self, x):\n",
+    "        features = []\n",
+    "        for i, layer in enumerate(self.vgg):\n",
+    "            x = layer(x)\n",
+    "            if i in self.layer_indices:\n",
+    "                features.append(x)\n",
+    "        return features\n",
+    "\n",
+    "# Example usage:\n",
+    "# Initialize the loss function\n",
+    "#loss_function = VGGPerceptualLoss(vgg_model='vgg16', layer_indices=[3, 8, 15, 22])\n",
+    "\n",
+    "# Assume x and y are your input and target images respectively\n",
+    "# x = ...\n",
+    "# y = ...\n",
+    "\n",
+    "# Calculate the loss\n",
+    "# loss = loss_function(x, y)\n",
+    "loss_function = VGGPerceptualLoss(vgg_model='vgg13_bn', layer_indices=[3, 8, 15, 22])\n",
+    "x = torch.randn(1, 3, 256, 256)\n",
+    "y =x\n",
+    "print(loss_function(x, y).item()) "
+   ]
   },
   {
    "cell_type": "code",
