--- a/work2.ipynb
+++ b/work2.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -63,15 +63,20 @@
       "Requirement already satisfied: torchviz in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (0.0.2)\n",
       "Requirement already satisfied: torchinfo in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (1.8.0)\n",
       "Requirement already satisfied: graphviz in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (0.20.3)\n",
+      "Collecting lpips\n",
+      "  Downloading lpips-0.1.4-py3-none-any.whl.metadata (10 kB)\n",
       "Requirement already satisfied: kornia[x] in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (0.7.3)\n",
       "Requirement already satisfied: torch in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from torchviz) (2.3.1)\n",
       "Requirement already satisfied: kornia-rs>=0.1.0 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from kornia[x]) (0.1.5)\n",
       "Requirement already satisfied: packaging in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from kornia[x]) (24.1)\n",
       "Requirement already satisfied: accelerate in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from kornia[x]) (0.33.0)\n",
       "Requirement already satisfied: onnxruntime-gpu>=1.16 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from kornia[x]) (1.18.1)\n",
+      "Requirement already satisfied: torchvision>=0.2.1 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from lpips) (0.18.1)\n",
+      "Requirement already satisfied: numpy>=1.14.3 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from lpips) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.0.1 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from lpips) (1.14.0)\n",
+      "Requirement already satisfied: tqdm>=4.28.1 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from lpips) (4.66.4)\n",
       "Requirement already satisfied: coloredlogs in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from onnxruntime-gpu>=1.16->kornia[x]) (15.0.1)\n",
       "Requirement already satisfied: flatbuffers in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from onnxruntime-gpu>=1.16->kornia[x]) (24.3.25)\n",
-      "Requirement already satisfied: numpy<2.0,>=1.21.6 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from onnxruntime-gpu>=1.16->kornia[x]) (1.26.4)\n",
       "Requirement already satisfied: protobuf in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from onnxruntime-gpu>=1.16->kornia[x]) (5.27.2)\n",
       "Requirement already satisfied: sympy in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from onnxruntime-gpu>=1.16->kornia[x]) (1.13.0)\n",
       "Requirement already satisfied: filelock in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from torch->torchviz) (3.15.4)\n",
@@ -79,24 +84,28 @@
       "Requirement already satisfied: networkx in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from torch->torchviz) (3.3)\n",
       "Requirement already satisfied: jinja2 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from torch->torchviz) (3.1.4)\n",
       "Requirement already satisfied: fsspec in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from torch->torchviz) (2024.6.1)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from torchvision>=0.2.1->lpips) (10.4.0)\n",
       "Requirement already satisfied: psutil in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from accelerate->kornia[x]) (6.0.0)\n",
       "Requirement already satisfied: pyyaml in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from accelerate->kornia[x]) (6.0.1)\n",
       "Requirement already satisfied: huggingface-hub>=0.21.0 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from accelerate->kornia[x]) (0.24.2)\n",
       "Requirement already satisfied: safetensors>=0.3.1 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from accelerate->kornia[x]) (0.4.3)\n",
       "Requirement already satisfied: requests in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from huggingface-hub>=0.21.0->accelerate->kornia[x]) (2.32.3)\n",
-      "Requirement already satisfied: tqdm>=4.42.1 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from huggingface-hub>=0.21.0->accelerate->kornia[x]) (4.66.4)\n",
       "Requirement already satisfied: humanfriendly>=9.1 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from coloredlogs->onnxruntime-gpu>=1.16->kornia[x]) (10.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from jinja2->torch->torchviz) (2.1.5)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from sympy->onnxruntime-gpu>=1.16->kornia[x]) (1.3.0)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from requests->huggingface-hub>=0.21.0->accelerate->kornia[x]) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from requests->huggingface-hub>=0.21.0->accelerate->kornia[x]) (3.7)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from requests->huggingface-hub>=0.21.0->accelerate->kornia[x]) (2.2.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from requests->huggingface-hub>=0.21.0->accelerate->kornia[x]) (2024.7.4)\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/pdi_4/anaconda3/envs/Losses/lib/python3.12/site-packages (from requests->huggingface-hub>=0.21.0->accelerate->kornia[x]) (2024.7.4)\n",
+      "Downloading lpips-0.1.4-py3-none-any.whl (53 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.8/53.8 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: lpips\n",
+      "Successfully installed lpips-0.1.4\n"
      ]
     }
    ],
    "source": [
-    "!pip install torchsummary torchviz torchinfo kornia[x] graphviz"
+    "!pip install torchsummary torchviz torchinfo kornia[x] graphviz lpips"
    ]
   },
   {
