saved loss functions

--- a/work2.ipynb
+++ b/work2.ipynb
@@ -1648,6 +1648,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Teste da classe GANLoss\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1816,13 +1825,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1830,70 +1832,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Color Structure Perceptual\t \t \t \t \t \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Detail loss\t \t \t \t \t \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### margin-ranking loss\t \t \t \t \t \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Classifier loss\t \t \t \t \t \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### LAB loss\t \t \t \t \t \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### LCH loss"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Content Loss VGG\t \t \t \t \t \n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "light_loss : 0.0 // Time: 0.01223\n",
-      "DarkChannelPriorLoss : 1.9073486328125e-06 // Time: 0.009889\n",
-      "L1Loss : 0.0 // Time: 0.004486\n",
-      "lch_loss : 0.15064361691474915 // Time: 0.019431\n",
-      "lab_loss : 404.4859924316406 // Time: 0.005175\n",
-      "L_exp : 0.001112040365114808 // Time: 0.001341\n",
-      "L_color : 3.706016741489293e-06 // Time: 0.000117\n"
+      "light_loss : 0.0 // Time: 0.000449\n",
+      "color_loss : 0.0 // Time: 0.020019\n",
+      "L1Loss : 0.0 // Time: 0.000178\n",
+      "L_exp : 0.0011275997385382652 // Time: 0.000307\n",
+      "RGBLoss : 7.77901823312277e-06 // Time: 0.000181\n"
      ]
     }
    ],
@@ -1952,7 +1903,6 @@
     "\n",
     "##############################################3\n",
     "\n",
-    "#NAO SEI O QUE FAZ\n",
     "class RGBloss(nn.Module):\n",
     "\n",
     "    def __init__(self):\n",
@@ -2003,11 +1953,7 @@
     "        return loss\n",
     "\n",
     "    \n",
-    "# LPIPS(net='vgg')#VGG16\n",
-    "# #adicionar alexnet(Adicionada)\n",
-    "# LPIPS(net='alex')\n",
-    "# #adicionar squeezenet(Adicionada)\n",
-    "# LPIPS(net='squeeze')\n",
+    "\n",
     "from numpy import mean, round, transpose\n",
     "from time import time\n",
     "\n",
@@ -2017,24 +1963,18 @@
     "mean_val = mean(t_image.detach().numpy())\n",
     "losses = {\n",
     "\"light_loss\": light_loss(),#\n",
-    "#\"color_loss\": color_loss(),#\n",
-    "\"DarkChannelPriorLoss\": DarkChannelPriorLoss(5),\n",
+    "\"color_loss\": color_loss(),#\n",
     "\"L1Loss\": L1Loss(),\n",
-    "\"lch_loss\": lch_Loss(),\n",
-    "\"lab_loss\": lab_Loss(),\n",
     "\"L_exp\": L_exp(5,mean_val),\n",
-    "\"L_color\": L_color(),\n",
-    "# \"loss_fn_alex\" : lpips.LPIPS(net='alex'), # best forward scores#\n",
-    "# \"loss_fn_vgg\" : lpips.LPIPS(net='vgg'), # closer to \"traditional\" perceptual loss, when used for optimization#\n",
-    "# \"loss_squeeze\" : lpips.LPIPS(net='squeeze') # lightest, faster, narrower, lower quality#\n",
+    "\"RGBLoss\": RGBloss(),\n",
     "}\n",
-    "#image_low = transpose(data_low.detach().cpu().numpy(), (1, 2, 0))\n",
-    "#image_high = transpose(data_high.detach().cpu().numpy(), (1, 2, 0))\n",
+    "\n",
     "for name, loss in losses.items():\n",
     "    start_time = time()\n",
-    "    if name == \"L1Loss\" or name == \"light_loss\" or name == \"color_loss\" or name == \"SSIM loss\" or name == \"color_loss\" or name == \"mse_loss\" or name == \"lab_loss\" or name == \"lch_loss\":\n",
+    "    if name == \"L1Loss\" or name == \"light_loss\" or name == \"mse_loss\" or name == \"color_loss\":\n",
     "        loss = loss(t_image, gt_image)\n",
     "    else:\n",
+    "        #print(name)\n",
     "        loss = loss(t_image)\n",
     "    end_time = time()\n",
     "    print(name, \":\", loss.item(), \"// Time:\", round(end_time-start_time,6))\n"
@@ -2042,14 +1982,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dark Channel Loss: 0.0\n"
+      "Dark Channel Loss: 0.0 time: 0.033286 seconds\n"
      ]
     }
    ],
@@ -2097,23 +2037,23 @@
     "    \n",
     "    # Initialize the DarkChannelLoss\n",
     "    dcl_loss = DarkChannelLoss(patch_size=15)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = dcl_loss(input_tensor, input_tensor)\n",
-    "    \n",
-    "    print(f\"Dark Channel Loss: {loss_value.item()}\")\n"
+    "    end_time = time()\n",
+    "    print(f\"Dark Channel Loss: {loss_value.item()} time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LCH Channel Loss: 106984.6875\n"
+      "LCH Channel Loss: 95152.203125 time: 0.068510 seconds\n"
      ]
     }
    ],
@@ -2204,23 +2144,23 @@
     "    \n",
     "    # Initialize the LCHChannelLoss\n",
     "    lch_loss = LCHChannelLoss(patch_size=15)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = lch_loss(input_tensor, target_tensor)\n",
-    "    \n",
-    "    print(f\"LCH Channel Loss: {loss_value.item()}\")\n"
+    "    end_time = time()\n",
+    "    print(f\"LCH Channel Loss: {loss_value.item()} time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lab Channel Loss: 0.0\n"
+      "Lab Channel Loss: 0.0 time: 0.099752 seconds\n"
      ]
     }
    ],
@@ -2321,23 +2261,23 @@
     "    \n",
     "    # Initialize the LabChannelLoss\n",
     "    lab_loss = LabChannelLoss(patch_size=15)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = lab_loss(input_tensor, input_tensor)\n",
-    "    \n",
-    "    print(f\"Lab Channel Loss: {round(loss_value.item())}\")\n"
+    "    end_time = time()\n",
+    "    print(f\"Lab Channel Loss: {round(loss_value.item())} time: {round(end_time-start_time,6)} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YUV Channel Loss: 0.0\n"
+      "YUV Channel Loss: 0.0, time: 0.071526 seconds\n"
      ]
     }
    ],
@@ -2419,23 +2359,24 @@
     "    \n",
     "    # Initialize the YUVChannelLoss\n",
     "    yuv_loss = YUVChannelLoss(patch_size=15)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = yuv_loss(input_tensor, input_tensor)\n",
+    "    end_time = time()\n",
     "    \n",
-    "    print(f\"YUV Channel Loss: {loss_value.item()}\")\n"
+    "    print(f\"YUV Channel Loss: {loss_value.item()}, time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HSV Channel Loss: 0.0\n"
+      "HSV Channel Loss: 0.0 time: 0.073903 seconds\n"
      ]
     }
    ],
@@ -2533,23 +2474,23 @@
     "    \n",
     "    # Initialize the HSVChannelLoss\n",
     "    hsv_loss = HSVChannelLoss(patch_size=15)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = hsv_loss(input_tensor, input_tensor)\n",
-    "    \n",
-    "    print(f\"HSV Channel Loss: {loss_value.item()}\")\n"
+    "    end_time = time()\n",
+    "    print(f\"HSV Channel Loss: {loss_value.item()} time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YCbCr Channel Loss: 0.0\n"
+      "YCbCr Channel Loss: 0.0 time: 0.065857 seconds\n"
      ]
     }
    ],
@@ -2631,23 +2572,23 @@
     "    \n",
     "    # Initialize the YCbCrChannelLoss\n",
     "    ycbcr_loss = YCbCrChannelLoss(patch_size=15)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = ycbcr_loss(input_tensor, input_tensor)\n",
-    "    \n",
-    "    print(f\"YCbCr Channel Loss: {loss_value.item()}\")\n"
+    "    end_time = time()\n",
+    "    print(f\"YCbCr Channel Loss: {loss_value.item()} time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CIELUV Channel Loss: 0.0\n"
+      "CIELUV Channel Loss: 0.0 time: 0.077800 seconds\n"
      ]
     }
    ],
@@ -2744,23 +2685,23 @@
     "    \n",
     "    # Initialize the CIELUVChannelLoss\n",
     "    cieluv_loss = CIELUVChannelLoss(patch_size=15)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = cieluv_loss(input_tensor, input_tensor)\n",
-    "    \n",
-    "    print(f\"CIELUV Channel Loss: {loss_value.item()}\")\n"
+    "    end_time = time()\n",
+    "    print(f\"CIELUV Channel Loss: {loss_value.item()} time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YUV420 Channel Loss: 0.0\n"
+      "YUV420 Channel Loss: 0.0, time: 0.086384 seconds\n"
      ]
     }
    ],
@@ -2847,23 +2788,23 @@
     "    \n",
     "    # Initialize the YUV420ChannelLoss\n",
     "    yuv420_loss = YUV420ChannelLoss(patch_size=15)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = yuv420_loss(input_tensor, input_tensor)\n",
-    "    \n",
-    "    print(f\"YUV420 Channel Loss: {loss_value.item()}\")\n"
+    "    end_time = time()\n",
+    "    print(f\"YUV420 Channel Loss: {loss_value.item()}, time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Histogram Color Loss: 0.0\n"
+      "Histogram Color Loss: 0.0, time: 0.000908 seconds\n"
      ]
     }
    ],
@@ -2928,11 +2869,11 @@
     "    \n",
     "    # Initialize the HistogramColorLoss\n",
     "    histogram_loss = HistogramColorLoss(bins=256)\n",
-    "    \n",
+    "    start_time = time()\n",
     "    # Compute loss\n",
     "    loss_value = histogram_loss(input_tensor, input_tensor)\n",
-    "    \n",
-    "    print(f\"Histogram Color Loss: {loss_value.item()}\")\n"
+    "    end_time = time()\n",
+    "    print(f\"Histogram Color Loss: {loss_value.item()}, time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
   {
