--- a/work2.ipynb
+++ b/work2.ipynb
@@ -2938,13 +2938,9 @@
     "\n",
     "\n",
     "loss_vgg11 = lpips.LPIPS(net='vgg')#a vgg vem do lpips entao\n",
-    "\n",
     "loss_squeeze = lpips.LPIPS(net='squeeze')\n",
-    "\n",
     "loss_alex = lpips.LPIPS(net='alex')\n",
-    "#from torchvision.models import vgg11, vgg11_bn, vgg16, vgg16_bn, vgg19_bn, vgg19, vgg13, vgg13_bn\n",
-    "\n",
-    "\n"
+    "#from torchvision.models import vgg11, vgg11_bn, vgg16, vgg16_bn, vgg19_bn, vgg19, vgg13, vgg13_bn"
    ]
   },
   {
@@ -3068,6 +3064,98 @@
     "x = torch.randn(1, 3, 256, 256)\n",
     "y =x\n",
     "print(loss_function(x, y).item()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient Loss: 0.7968171238899231\n",
+      "Time taken: 0.002445 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import cv2\n",
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "class GradientLossOpenCV(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(GradientLossOpenCV, self).__init__()\n",
+    "    \n",
+    "    def compute_gradient(self, image):\n",
+    "        \"\"\"\n",
+    "        Compute the gradient of an image using OpenCV Sobel filters.\n",
+    "\n",
+    "        Args:\n",
+    "            image (Tensor): The image with shape (N, C, H, W).\n",
+    "\n",
+    "        Returns:\n",
+    "            Tensor: The gradient magnitude with shape (N, C, H, W).\n",
+    "        \"\"\"\n",
+    "        # Convert PyTorch tensor to NumPy array\n",
+    "        image_np = image.detach().cpu().numpy()\n",
+    "        N, C, H, W = image_np.shape\n",
+    "        \n",
+    "        gradient_magnitude = np.zeros((N, C, H, W), dtype=np.float32)\n",
+    "        \n",
+    "        for n in range(N):\n",
+    "            for c in range(C):\n",
+    "                img = image_np[n, c, :, :]\n",
+    "                grad_x = cv2.Sobel(img, cv2.CV_64F, 1, 0, ksize=3)\n",
+    "                grad_y = cv2.Sobel(img, cv2.CV_64F, 0, 1, ksize=3)\n",
+    "                grad_mag = np.sqrt(grad_x ** 2 + grad_y ** 2)\n",
+    "                gradient_magnitude[n, c, :, :] = grad_mag\n",
+    "        \n",
+    "        # Convert NumPy array back to PyTorch tensor\n",
+    "        gradient_magnitude_tensor = torch.tensor(gradient_magnitude).to(image.device)\n",
+    "        \n",
+    "        return gradient_magnitude_tensor\n",
+    "\n",
+    "    def forward(self, input, target):\n",
+    "        \"\"\"\n",
+    "        Compute the gradient loss between the input and target images.\n",
+    "\n",
+    "        Args:\n",
+    "            input (Tensor): The predicted image with shape (N, C, H, W).\n",
+    "            target (Tensor): The ground truth image with shape (N, C, H, W).\n",
+    "\n",
+    "        Returns:\n",
+    "            Tensor: The Gradient Loss value.\n",
+    "        \"\"\"\n",
+    "        # Compute gradients\n",
+    "        gradient_input = self.compute_gradient(input)\n",
+    "        gradient_target = self.compute_gradient(target)\n",
+    "        \n",
+    "        # Compute the loss\n",
+    "        loss = F.mse_loss(gradient_input, gradient_target)\n",
+    "        return loss\n",
+    "\n",
+    "# Test the GradientLossOpenCV with timing\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Create a random tensor for input and target\n",
+    "    input_tensor = torch.rand((1, 3, 256, 256))  # Example shape (N, C, H, W)\n",
+    "    target_tensor = torch.rand((1, 3, 256, 256))  # Example shape (N, C, H, W)\n",
+    "    \n",
+    "    # Initialize the GradientLossOpenCV\n",
+    "    gradient_loss = GradientLossOpenCV()\n",
+    "    \n",
+    "    # Measure the time taken to compute the loss\n",
+    "    start_time = time.time()\n",
+    "    loss_value = gradient_loss(input_tensor, target_tensor)\n",
+    "    end_time = time.time()\n",
+    "    \n",
+    "    print(f\"Gradient Loss: {loss_value.item()}\")\n",
+    "    print(f\"Time taken: {end_time - start_time:.6f} seconds\")\n"
    ]
   },
   {
