Adicionando módulo de Loss

--- a/work2.ipynb
+++ b/work2.ipynb
@@ -1061,12 +1061,12 @@
     }
    ],
    "source": [
-    "import os\n",
-    "if not os.path.isdir(\"pytorch-CycleGAN-and-pix2pix\"):\n",
-    "    !git clone https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix.git\n",
-    "os.chdir(\"pytorch-CycleGAN-and-pix2pix\")\n",
-    "!pip install -r requirements.txt \n",
-    "!ls"
+    "# import os\n",
+    "# if not os.path.isdir(\"pytorch-CycleGAN-and-pix2pix\"):\n",
+    "#     !git clone https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix.git\n",
+    "# os.chdir(\"pytorch-CycleGAN-and-pix2pix\")\n",
+    "# !pip install -r requirements.txt \n",
+    "# !ls"
    ]
   },
   {
@@ -1110,7 +1110,6 @@
     }
    ],
    "source": [
-    "os.chdir(\"..\")\n",
     "!ls"
    ]
   },
@@ -1902,7 +1901,7 @@
     "        return loss\n",
     "\n",
     "##############################################3\n",
-    "\n",
+    "#não pegar\n",
     "class RGBloss(nn.Module):\n",
     "\n",
     "    def __init__(self):\n",
@@ -1919,7 +1918,7 @@
     "        Dgb = torch.pow(mb-mg,2)\n",
     "        k = torch.pow(torch.pow(Drg,2) + torch.pow(Drb,2) + torch.pow(Dgb,2),0.5)\n",
     "        return k\n",
-    "\n",
+    "#não pegar\n",
     "class L_exp(nn.Module):\n",
     "    \"\"\"\n",
     "    patch_size: tamanho do patch para calcular a média\n",
@@ -2046,14 +2045,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LCH Channel Loss: 95152.203125 time: 0.068510 seconds\n"
+     "ename": "NameError",
+     "evalue": "name 's' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 88\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;66;03m# Initialize the LCHChannelLoss\u001b[39;00m\n\u001b[1;32m     87\u001b[0m lch_loss \u001b[38;5;241m=\u001b[39m LCHChannelLoss(patch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m15\u001b[39m)\n\u001b[0;32m---> 88\u001b[0m s\u001b[38;5;66;03m#tart_time = time()\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;66;03m# Compute loss\u001b[39;00m\n\u001b[1;32m     90\u001b[0m loss_value \u001b[38;5;241m=\u001b[39m lch_loss(input_tensor, input_tensor)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 's' is not defined"
      ]
     }
    ],
@@ -2062,6 +2065,7 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
+    "import time\n",
     "\n",
     "class LCHChannelLoss(nn.Module):\n",
     "    def __init__(self, patch_size=15):\n",
@@ -2144,10 +2148,10 @@
     "    \n",
     "    # Initialize the LCHChannelLoss\n",
     "    lch_loss = LCHChannelLoss(patch_size=15)\n",
-    "    start_time = time()\n",
+    "    #start_time = time()\n",
     "    # Compute loss\n",
-    "    loss_value = lch_loss(input_tensor, target_tensor)\n",
-    "    end_time = time()\n",
+    "    loss_value = lch_loss(input_tensor, input_tensor)\n",
+    "    #end_time = time()\n",
     "    print(f\"LCH Channel Loss: {loss_value.item()} time: {end_time-start_time:.6f} seconds\")\n"
    ]
   },
